[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AsyncLogger"
version = "1.0.0"
description = "An advanced asynchronous logging framework for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "HollowTheSilver", email = "hollowstools@gmail.com"}
]
keywords = ["logging", "async", "python", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging"
]

[project.urls]
Homepage = "https://github.com/HollowTheSilver/AsyncLogger"
Repository = "https://github.com/HollowTheSilver/AsyncLogger"
Issues = "https://github.com/HollowTheSilver/AsyncLogger/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503"