[metadata]
name = AsyncLogger
version = 1.0.0
description = An advanced asynchronous logging framework for Python
long_description = file: README.md
long_description_content_type = text/markdown
author = HollowTheSilver
author_email = hollowstools@gmail.com
url = https://github.com/HollowTheSilver/AsyncLogger
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging

[options]
packages = find:
python_requires = >=3.9
install_requires = 

[options.extras_require]
dev =
    pytest>=7.3.0
    pytest-asyncio>=0.21.0
    flake8>=3.9.0
    black>=23.3.0
    mypy>=1.3.0
    coverage>=7.2.0

[tool:pytest]
testpaths = tests
asyncio_mode = auto